@@ -1,6 +1,10 @@
 * Wed May 28 2014 Ding-Yi Chen <dchen at redhat.com> - 2.0.0
 - Fixed Bug 1093336 - date(1): -u is much portable than --utc
 - Enhancement:
+  + No need to use MAKE_INSTALL_* for rpm files section.
+    INSTALL at any place works.
+  + find_lang and files -f .lang are added automatically when
+    translations exists.
   + New modules:
     - CmakeFedoraScript: Scripts to be invoked in command line.
     - ManageRpmScript: RPM Scripts to be invoked in command line.
